Re-implemented EvoAl core (except for constraint handling).